# epochzero-skills-compose

./: .gitignore  README.md  pyproject.toml
claude_dev_logs/: auto-skill-generator-dev--concise-steps.md  auto-skill-generator-dev--details-plan.md
config/: generation_config.yaml  org_chart.yaml  qa_thresholds.yaml  schedule.yaml  source_config.yaml  topic_taxonomy.yaml
docs/: api.md  architecture.md
infra/: Dockerfile  docker-compose.yaml
infra/ci/: github-actions.yaml
prompts/: aggregate_topics.txt  classify_content.txt  dedup_check.txt  plan_skills.txt  write_skill.txt
scripts/: evaluate_classification.py  seed_taxonomy.py
src/: __init__.py
src/agents/: __init__.py  feedback.py  gap_detector.py  hot_reloader.py  metrics.py  report.py  skill_loader.py  usage_tracker.py
src/api/: __init__.py  app.py  auth.py
src/classification/: __init__.py  llm_classifier.py  metadata_classifier.py  pipeline.py
src/cli/: __init__.py  main.py
src/common/: __init__.py  config.py  models.py  utils.py
src/connectors/: __init__.py  base.py  confluence.py  github_connector.py  google_drive.py  manual_file.py  sharepoint.py  web_scraper.py
src/embedding/: __init__.py  pipeline.py  vector_store.py
src/generation/: __init__.py  aggregator.py  batch_generator.py  dependency_resolver.py  file_writer.py  hierarchical_aggregator.py  plan_review.py  planner.py  writer.py
src/ingestion/: __init__.py  chunker.py  format_converters.py
src/qa/: __init__.py  content.py  pipeline.py  security.py  structural.py
src/registry/: __init__.py  changelog.py  (+2 more)
tests/: conftest.py
(+28 files in other folders)
